[project]
name = "landaulang"
version = "0.1.0"
description = "Small 'home' programming language (name is given in honor of soviet scientist Lev D. Landau)"
authors = [
    {name = "alexeev-prog",email = "alexeev.dev@mail.ru"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
