[project]
name = "landaulang"
version = "0.1.1"
description = "Small 'home' programming language (name is given in honor of soviet scientist Lev D. Landau)"
authors = [
    {name = "alexeev-prog",email = "alexeev.dev@mail.ru"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "sly (>=0.5,<0.6)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
landaulang = "landaulang.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pytest = "^8.3.4"
black = "^25.1.0"

